feat: added dasher-nx launch config and compression

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ else()
 		find_package(std_msgs REQUIRED)
 		find_package(sensor_msgs REQUIRED)
 		find_package(vision_msgs REQUIRED)
+		find_package(image_transport REQUIRED)
 
 		set(CMAKE_CXX_STANDARD 14)
 		include_directories(${CUDA_INCLUDE_DIRS})
@@ -82,6 +83,8 @@ target_link_libraries(video_source ${catkin_LIBRARIES} jetson-inference)
 add_executable(video_output src/node_video_output.cpp ${common_src})
 target_link_libraries(video_output ${catkin_LIBRARIES} jetson-inference)
 
+add_executable(video_output_compressed src/node_video_transport_subscriber.cpp)
+
 if( catkin_FOUND )
 	add_library(ros_deep_learning_nodelets src/nodelet_imagenet.cpp src/image_converter.cpp)
 	target_link_libraries(ros_deep_learning_nodelets ${catkin_LIBRARIES} jetson-inference)
@@ -99,11 +102,14 @@ else()
 	ament_target_dependencies(segnet rclcpp std_msgs sensor_msgs vision_msgs)
 	install(TARGETS segnet DESTINATION lib/${PROJECT_NAME})
 
-	ament_target_dependencies(video_source rclcpp std_msgs sensor_msgs vision_msgs)
+	ament_target_dependencies(video_source rclcpp std_msgs image_transport sensor_msgs vision_msgs)
 	install(TARGETS video_source DESTINATION lib/${PROJECT_NAME})
 
 	ament_target_dependencies(video_output rclcpp std_msgs sensor_msgs vision_msgs)
 	install(TARGETS video_output DESTINATION lib/${PROJECT_NAME})
+
+	ament_target_dependencies(video_output_compressed rclcpp sensor_msgs image_transport)
+	install(TARGETS video_output_compressed DESTINATION lib/${PROJECT_NAME})
 
 	install(DIRECTORY launch DESTINATION share/${PROJECT_NAME}/)
 
